--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "from-the-beginning",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "private": true,
+  "engines": {
+    "node": ">=18.15"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -10,40 +14,45 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
+  "lint-staged": {
+    "*.{ts,js,vue}": "eslint ./src --fix",
+    "*.scss": "stylelint -s --config-basedir --fix"
+  },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "pinia": "^2.0.21",
-    "sass": "^1.55.0",
-    "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "@vueuse/core": "^8.9.4",
+    "@vueuse/head": "^0.9.8",
+    "@vueuse/integrations": "^8.9.4",
+    "pinia": "^2.1.3",
+    "vite-plugin-pages": "^0.29.0",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^20.0.0",
-    "@types/node": "^16.11.62",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-airbnb-with-typescript": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.0.2",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.22.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.0",
-    "npm-run-all": "^4.1.5",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.9",
-    "vite-plugin-windicss": "^1.8.8",
-    "vitest": "^0.23.0",
-    "vue-tsc": "^0.40.7",
-    "windicss": "^3.5.6"
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/compiler-sfc": "^3.2.47",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^16.2.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-vue": "^7.20.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.5.0",
+    "postcss": "^8.4.4",
+    "postcss-scss": "^4.0.2",
+    "sass": "1.32.13",
+    "stylelint": "^14.16.1",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "typescript": "^5.0.4",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.3.8"
   }
 }
