--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build": "run-p lint build-only",
     "preview": "vite preview --port 4173",
-    "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "lint-staged": {
@@ -49,6 +47,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.5.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.4",
     "postcss-scss": "^4.0.2",
     "postcss-windicss": "^1.0.0",
@@ -60,6 +59,7 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.8",
     "vite-plugin-windicss": "^1.8.8",
+    "vue-tsc": "^1.8.0",
     "windicss": "^3.5.6"
   }
 }
